[package]
name = "hammer"
description = "Flatten the f*ck out of your NFT images. A Rust-powered Hashlips alternative that prioritizes user ergonomics."
version = "0.1.0"
edition = "2021"
authors = ["Kristian Quirapas <kmquirapas@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
